dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/RPgSQL.c)

dnl Checks for libraries.
AC_CHECK_LIB(crypt, crypt)
AC_CHECK_LIB(pq, PQconnectdb)

dnl Checks for header files.
dnl Following courtesy of Kurt Hornik
for dir in \
    /usr/include \
    /usr/include/pgsql \
    /usr/include/postgresql \
    /usr/local/include \
    /usr/local/include/pgsql \
    /usr/local/include/postgresql \
    /opt/include \
    /opt/include/pgsql \
    /opt/include/postgresql; do
    AC_CHECK_HEADER(${dir}/libpq-fe.h, PKG_CPPFLAGS="-I${dir}")
    if test $PKG_CPPFLAGS; then break; fi
done
AC_SUBST(PKG_CPPFLAGS)

AC_OUTPUT(src/Makefile)
